--- a/public/css/about.css
+++ b/public/css/about.css
@@ -33,7 +33,7 @@
   }
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1200px) {
   #about .container {
     width: 60% !important;
   }
@@ -53,7 +53,7 @@ h1 {
 .content p {
   color: #14171A;
   margin: auto;
-  font-family: 'Apercu Regular';
+  font-family: 'Apercu Medium';
 }
 
 @media (max-width: 575px) {
@@ -63,7 +63,7 @@ h1 {
   }
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1200px) {
   .content p {
     width: 80%;
   }
