--- a/public/css/approve.scss
+++ b/public/css/approve.scss
@@ -12,7 +12,7 @@ body{
 }
 
 span{ 
-    font-family: 'Apercu Thin', sans-serif; 
+    font-family: 'Apercu Light', sans-serif; 
     font-size: 14px;
 }
 
