--- a/public/css/about.css
+++ b/public/css/about.css
@@ -53,7 +53,7 @@ h1 {
 .content p {
   color: #14171A;
   margin: auto;
-  font-family: 'Apercu Medium';
+  font-family: 'Apercu Regular';
 }
 
 @media (max-width: 575px) {
