--- a/public/css/approve.css
+++ b/public/css/approve.css
@@ -92,7 +92,7 @@ span {
 }
 
 .toggleButton input + div {
-  border: 3px solid rgba(15, 120, 185, 0.2);
+  border: 3px solid transparent;
   border-radius: 50%;
   position: relative;
   width: 32px;
@@ -100,9 +100,9 @@ span {
 }
 
 .toggleButton input + div svg {
-  fill: none;
-  stroke-width: 3.6;
-  stroke: rgba(15, 120, 185, 0.89);
+  fill: #9CE2B6;
+  stroke-width: 0;
+  stroke: #136E36;
   stroke-linecap: round;
   stroke-linejoin: round;
   width: 32px;
@@ -122,9 +122,10 @@ span {
 
 .toggleButton input + div:before, .toggleButton input + div:after {
   content: '';
-  width: 3px;
+  width: 2px;
   height: 12px;
-  background: rgba(15, 120, 185, 0.89);
+  background: #8E2829;
+  z-index: 100;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -150,10 +151,11 @@ span {
 .toggleButton input:checked + div svg {
   stroke-dashoffset: 162.6;
   stroke-dasharray: 0 162.6 28 134.6;
+  stroke-width: 3.6;
   -webkit-transition: all .4s ease .2s;
   transition: all .4s ease .2s;
-  fill: rgba(15, 120, 185, 0.89);
-  stroke: #F5F8FA;
+  fill: #e8f0fe;
+  stroke: #1967d2;
 }
 
 .toggleButton input:checked + div:before {
