--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -48,11 +48,21 @@
 
 #upload-warning, #tags-warning {
   font-size: 12px;
+  font-family: 'Apercu Light';
+}
+
+label {
+  font-family: 'Apercu Bold';
+}
+
+input, textarea, .upload-info {
+  font-family: 'Apercu Regular';
 }
 
 .custom-file-label {
   color: #a89797;
   display: inline-block;
+  font-family: 'Apercu Regular';
   overflow: hidden;
   vertical-align: middle;
   background-color: #F5F8FA;
@@ -72,14 +82,6 @@
   background: #007bff;
 }
 
-.question {
-  font-size: 12px;
-}
-
-.question:hover {
-  color: rgba(15, 120, 185, 0.89) !important;
-}
-
 .toggle {
   font-size: 0;
   display: -webkit-box;
@@ -96,6 +98,10 @@
   height: 0;
   position: absolute;
   left: 0px;
+}
+
+.toggle label {
+  font-family: 'Apercu Regular';
 }
 
 .toggle input + label {
@@ -212,6 +218,15 @@
   }
 }
 
+.input-info {
+  font-size: 12.5px;
+  font-family: 'Apercu Light';
+}
+
+.upload-info {
+  font-size: 14px;
+}
+
 .bootstrap-tagsinput {
   width: 100%;
   background: #F5F8FA;
@@ -223,6 +238,7 @@
   border-radius: 3px;
   color: #212529;
   font-size: 14px;
+  font-family: 'Apercu Regular';
 }
 
 .bootstrap-tagsinput .tag [data-role="remove"]:after {
