--- a/public/css/general.scss
+++ b/public/css/general.scss
@@ -40,10 +40,18 @@ button span {
     background: color(nice-blue) !important;
     border-color: color(nice-blue) !important;
     color: color(bright-gray);
+    background-position: center !important;
+    transition: background 0.9s !important;
 
     &:hover{
-        background: color(primary) !important;
-        border-color: color(primary) !important;
+        background: color(primary) radial-gradient(circle, transparent 1%, color(primary) 1%) center/15000% !important;
+        border-color: transparent !important;
+    }
+
+    &:active{
+        background-color: #5fb5fc !important;
+        background-size: 100% !important;
+        transition: background 0s !important;
     }
 }
 
