dah bisa nampilin infographic dan events di home, fix carousel di galeri

--- a/public/css/general.scss
+++ b/public/css/general.scss
@@ -65,6 +65,10 @@ button span {
 ::placeholder {
     color: color(placeholder) !important;
 }
+
+.owl-theme .owl-dots .owl-dot{
+    outline: none;
+}
 /* end of global styling */
 
 /*  ==============
