--- a/public/css/general.css
+++ b/public/css/general.css
@@ -101,6 +101,10 @@ section {
   color: #a89797 !important;
 }
 
+.owl-theme .owl-dots .owl-dot {
+  outline: none;
+}
+
 /* end of global styling */
 /*  ==============
     navbar
