--- a/public/css/about.css
+++ b/public/css/about.css
@@ -12,15 +12,17 @@
 
 #about {
   height: calc(100vh - 58px);
-  background-image: url("../images/about.jpg");
-  background-position: 65% 65%;
 }
 
-@media (min-height: 845px) {
-  #about {
-    background-image: url("../images/about2.jpg");
-    background-position: 65% 85%;
-  }
+#about img {
+  z-index: -100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 #about .container, #about .row {
