--- a/public/css/about.scss
+++ b/public/css/about.scss
@@ -7,12 +7,15 @@ body{
 }
 #about{
     height: calc(100vh - 58px);
-    background-image: url('../images/about.jpg');
-    background-position: 65% 65%;
-
-    @media (min-height: 845px){
-        background-image: url('../images/about2.jpg');
-        background-position: 65% 85%;
+    
+    img{
+        z-index: -100;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .container, .row{
