--- a/public/css/welcome.scss
+++ b/public/css/welcome.scss
@@ -87,6 +87,12 @@
         }
     }
 
+    #social{
+        img{
+            object-position: 15%;
+        }
+    }
+
 @-webkit-keyframes gradientBackground {
     0%{background-position:0% 59%}
     50%{background-position:100% 42%}
